decl test fixed